# tectonic_plate_simulator

./: .gitignore  Cargo.toml
assets/shaders/: pressure_material.wgsl  pressure_solver.wgsl  vertex_pressure.wgsl
src/: lib.rs  main.rs
src/materials/: mod.rs  pressure_material.rs
src/plugins/: mod.rs  pressure_solver.rs
src/resources/: mantle_grid.rs  mod.rs  pressure_buffers.rs  vertex_pressure_buffer.rs
src/systems/: gizmos.rs  mod.rs  setup.rs
